load("@rules_semiwrap//:defs.bzl", "make_pyi", "robotpy_library")
load("//:version.bzl", "MOSTROBOTPY_VERSION")
load("//bazel_scripts:generate_build_info.bzl", "generate_build_info")
load("//subprojects/robotpy-wpilib:generated_build_info.bzl", "get_generated_data_files", "libinit_files", "wpilib_counter_extension", "wpilib_drive_extension", "wpilib_event_extension", "wpilib_extension", "wpilib_interfaces_extension", "wpilib_shuffleboard_extension", "wpilib_simulation_extension")

generate_build_info(
    name = "wpilib",
    local_libraries = [
        "//subprojects/robotpy-native-ntcore:import",
        "//subprojects/robotpy-native-wpinet:import",
        "//subprojects/robotpy-native-wpilib:import",
        "//subprojects/robotpy-native-wpimath:import",
        "//subprojects/robotpy-native-wpiutil:import",
        "//subprojects/robotpy-native-wpihal:import",
        "//subprojects/robotpy-wpimath:import",
        "//subprojects/robotpy-wpinet:import",
        "//subprojects/robotpy-wpiutil:import",
        "//subprojects/robotpy-hal:import",
        "//subprojects/pyntcore:import",
    ],
    pkgcfgs = [
        "$(location //subprojects/robotpy-native-wpimath:import)/site-packages/native/wpimath/robotpy-native-wpimath.pc",
        "$(location //subprojects/robotpy-native-wpiutil:import)/site-packages/native/wpiutil/robotpy-native-wpiutil.pc",
        "$(location //subprojects/robotpy-native-wpilib:import)/site-packages/native/wpilib/robotpy-native-wpilib.pc",
        "$(location //subprojects/robotpy-native-wpihal:import)/site-packages/native/wpihal/robotpy-native-wpihal.pc",
        "$(location //subprojects/robotpy-native-wpinet:import)/site-packages/native/wpinet/robotpy-native-wpinet.pc",
        "$(location //subprojects/robotpy-native-ntcore:import)/site-packages/native/ntcore/robotpy-native-ntcore.pc",
        "$(location //subprojects/robotpy-wpinet:import)/site-packages/wpinet/wpinet.pc",
        "$(location //subprojects/robotpy-wpimath:import)/site-packages/wpimath/wpimath.pc",
        "$(location //subprojects/robotpy-wpimath:import)/site-packages/wpimath/geometry/wpimath_geometry.pc",
        "$(location //subprojects/robotpy-wpimath:import)/site-packages/wpimath/filter/wpimath_filter.pc",
        "$(location //subprojects/robotpy-wpimath:import)/site-packages/wpimath/controls/wpimath_controls.pc",
        "$(location //subprojects/robotpy-wpimath:import)/site-packages/wpimath/kinematics/wpimath_kinematics.pc",
        "$(location //subprojects/robotpy-wpimath:import)/site-packages/wpimath/spline/wpimath_spline.pc",
        "$(location //subprojects/robotpy-hal:import)/site-packages/hal/wpihal.pc",
        "$(location //subprojects/pyntcore:import)/site-packages/ntcore/ntcore.pc",
        "$(location //subprojects/robotpy-wpiutil:import)/site-packages/wpiutil/wpiutil.pc",
    ],
    pyproject_toml = ":pyproject.toml",
    yaml_files = glob(["semiwrap/**/*.yml"]),
    additional_srcs = ["wpilib/src/rpy/Filesystem.h", "wpilib/src/rpy/Notifier.h", "wpilib/src/rpy/MotorControllerGroup.h"],
)

wpilib_event_extension(
    entry_point = ["wpilib/event/event.cpp"],
    extension_name = "_event",
    header_to_dat_deps = [
        "@bzlmodrio-allwpilib//libraries/cpp/wpilibc:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/hal:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/ntcore:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/wpimath:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/wpinet:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/wpiutil:header_files",
    ],
    deps = [
        "//subprojects/robotpy-wpimath:wpimath_filter_pybind_library",
        "@bzlmodrio-allwpilib//libraries/cpp/wpilibc:shared",
    ],
)

wpilib_interfaces_extension(
    entry_point = ["wpilib/interfaces/interfaces.cpp"],
    extension_name = "_interfaces",
    header_to_dat_deps = [
        "@bzlmodrio-allwpilib//libraries/cpp/hal:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/ntcore:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/wpilibc:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/wpimath:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/wpinet:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/wpiutil:header_files",
    ],
    deps = [
        "//subprojects/robotpy-wpilib:wpilib_event_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_filter_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_geometry_pybind_library",
        "@bzlmodrio-allwpilib//libraries/cpp/wpilibc:shared",
    ],
)

wpilib_extension(
    entry_point = ["wpilib/src/main.cpp"],
    extra_hdrs = glob([
        "wpilib/src/rpy/*.h",
        "wpilib/src/rpy/*.inc",
    ]),
    extra_srcs = glob(
        ["wpilib/src/**/*.cpp"],
        exclude = ["wpilib/src/main.cpp"],
    ),
    header_to_dat_deps = [
        "@bzlmodrio-allwpilib//libraries/cpp/wpilibc:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/hal:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/ntcore:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/wpimath:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/wpinet:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/wpiutil:header_files",
    ],
    includes = [
        "wpilib",
        "wpilib/src",
    ],
    deps = [
        "//subprojects/pyntcore:ntcore_pybind_library",
        "//subprojects/robotpy-hal:wpiHal_pybind_library",
        "//subprojects/robotpy-wpilib:wpilib_event_pybind_library",
        "//subprojects/robotpy-wpilib:wpilib_interfaces_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_controls_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_filter_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_geometry_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_pybind_library",
        "//subprojects/robotpy-wpiutil:wpiutil_pybind_library",
        "@bzlmodrio-allwpilib//libraries/cpp/wpilibc:shared",
    ],
)

wpilib_counter_extension(
    entry_point = ["wpilib/counter/counter.cpp"],
    extension_name = "_counter",
    header_to_dat_deps = [
        "@bzlmodrio-allwpilib//libraries/cpp/wpilibc:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/hal:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/ntcore:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/wpimath:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/wpinet:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/wpiutil:header_files",
    ] + glob([
        "wpilib/src/rpy/*.h",
        "wpilib/src/rpy/*.inc",
    ]),
    deps = [
        "//subprojects/pyntcore:ntcore_pybind_library",
        "//subprojects/robotpy-hal:wpiHal_pybind_library",
        "//subprojects/robotpy-wpilib:wpilib_event_pybind_library",
        "//subprojects/robotpy-wpilib:wpilib_interfaces_pybind_library",
        "//subprojects/robotpy-wpilib:wpilib_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_controls_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_filter_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_geometry_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_pybind_library",
        "//subprojects/robotpy-wpiutil:wpiutil_pybind_library",
        "@bzlmodrio-allwpilib//libraries/cpp/wpilibc:shared",
    ],
)

wpilib_drive_extension(
    entry_point = ["wpilib/drive/drive.cpp"],
    extension_name = "_drive",
    header_to_dat_deps = [
        "@bzlmodrio-allwpilib//libraries/cpp/wpilibc:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/hal:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/ntcore:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/wpimath:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/wpinet:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/wpiutil:header_files",
    ] + glob([
        "wpilib/src/rpy/*.h",
        "wpilib/src/rpy/*.inc",
    ]),
    deps = [
        "//subprojects/pyntcore:ntcore_pybind_library",
        "//subprojects/robotpy-hal:wpiHal_pybind_library",
        "//subprojects/robotpy-wpilib:wpilib_event_pybind_library",
        "//subprojects/robotpy-wpilib:wpilib_interfaces_pybind_library",
        "//subprojects/robotpy-wpilib:wpilib_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_controls_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_filter_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_geometry_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_pybind_library",
        "//subprojects/robotpy-wpiutil:wpiutil_pybind_library",
        "@bzlmodrio-allwpilib//libraries/cpp/wpilibc:shared",
    ],
)

wpilib_shuffleboard_extension(
    entry_point = ["wpilib/shuffleboard/shuffleboard.cpp"],
    extension_name = "_shuffleboard",
    extra_hdrs = glob(["wpilib/shuffleboard/*.h"]),
    extra_srcs = glob(
        ["wpilib/shuffleboard/*.cpp"],
        exclude = ["wpilib/shuffleboard/shuffleboard.cpp"],
    ),
    header_to_dat_deps = [
        "@bzlmodrio-allwpilib//libraries/cpp/wpilibc:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/hal:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/ntcore:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/wpimath:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/wpinet:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/wpiutil:header_files",
    ] + glob([
        "wpilib/src/rpy/*.h",
        "wpilib/src/rpy/*.inc",
    ]),
    includes = ["wpilib/shuffleboard"],
    deps = [
        "//subprojects/pyntcore:ntcore_pybind_library",
        "//subprojects/robotpy-hal:wpiHal_pybind_library",
        "//subprojects/robotpy-wpilib:wpilib_event_pybind_library",
        "//subprojects/robotpy-wpilib:wpilib_interfaces_pybind_library",
        "//subprojects/robotpy-wpilib:wpilib_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_controls_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_filter_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_geometry_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_pybind_library",
        "//subprojects/robotpy-wpiutil:wpiutil_pybind_library",
        "@bzlmodrio-allwpilib//libraries/cpp/wpilibc:shared",
    ],
)

wpilib_simulation_extension(
    entry_point = ["wpilib/simulation/simulation.cpp"],
    extension_name = "_simulation",
    header_to_dat_deps = [
        "@bzlmodrio-allwpilib//libraries/cpp/wpilibc:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/hal:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/ntcore:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/wpimath:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/wpinet:header_files",
        "@bzlmodrio-allwpilib//libraries/cpp/wpiutil:header_files",
    ] + glob([
        "wpilib/src/rpy/*.h",
        "wpilib/src/rpy/*.inc",
    ]),
    deps = [
        "//subprojects/pyntcore:ntcore_pybind_library",
        "//subprojects/robotpy-hal:wpiHal_pybind_library",
        "//subprojects/robotpy-wpilib:wpilib_event_pybind_library",
        "//subprojects/robotpy-wpilib:wpilib_interfaces_pybind_library",
        "//subprojects/robotpy-wpilib:wpilib_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_controls_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_filter_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_geometry_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_kinematics_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_pybind_library",
        "//subprojects/robotpy-wpiutil:wpiutil_pybind_library",
        "@bzlmodrio-allwpilib//libraries/cpp/wpilibc:shared",
    ],
)

make_pyi(
    name = "make_pyi7",
)

make_pyi(
    name = "make_pyi7",
)

make_pyi(
    name = "make_pyi7",
)

make_pyi(
    name = "make_pyi7",
)

make_pyi(
    name = "make_pyi7",
)

make_pyi(
    name = "make_pyi7",
)

make_pyi(
    name = "make_pyi7",
)

robotpy_library(
    name = "wpilib",
    package_name = "wpilib",
    srcs = glob(["wpilib/**/*.py"]) + libinit_files(),
    data = get_generated_data_files(),
    imports = ["."],
    robotpy_wheel_deps = [
        "//subprojects/pyntcore:import",
        "//subprojects/robotpy-hal:import",
        "//subprojects/robotpy-native-wpilib:import",
        "//subprojects/robotpy-wpimath:import",
        "//subprojects/robotpy-wpiutil:import",
    ],
    strip_path_prefixes = ["subprojects/robotpy-wpilib"],
    version = MOSTROBOTPY_VERSION,
    visibility = ["//visibility:public"],
)

filegroup(
    name = "generated_files",
    srcs = [
        "wpilib.generated_files",
        "wpilib_counter.generated_files",
        "wpilib_drive.generated_files",
        "wpilib_event.generated_files",
        "wpilib_interfaces.generated_files",
        "wpilib_shuffleboard.generated_files",
        "wpilib_simulation.generated_files",
    ],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)
