load("@mostrobotpy_tests_pip_deps//:requirements.bzl", "requirement")
load("//:version.bzl", "MOSTROBOTPY_VERSION")
load("//bazel_scripts:file_resolver_utils.bzl", "local_pc_file_util")
load("//bazel_scripts:generate_build_info.bzl", "generate_build_info")
load("//subprojects/robotpy-wpilib:generated_build_info.bzl", "define_pybind_library", "wpilib_counter_extension", "wpilib_drive_extension", "wpilib_event_extension", "wpilib_extension", "wpilib_interfaces_extension", "wpilib_shuffleboard_extension", "wpilib_simulation_extension")

generate_build_info(
    name = "wpilib",
    additional_srcs = [
        "wpilib/src/rpy/Filesystem.h",
        "wpilib/src/rpy/Notifier.h",
        "wpilib/src/rpy/MotorControllerGroup.h",
    ],
    local_pkgcfgs = local_pc_file_util(
                        "//subprojects/robotpy-native-wpiutil",
                        ["native/wpiutil/robotpy-native-wpiutil.pc"],
                    ) +
                    local_pc_file_util(
                        "//subprojects/robotpy-native-wpimath",
                        ["native/wpimath/robotpy-native-wpimath.pc"],
                    ) +
                    local_pc_file_util(
                        "//subprojects/robotpy-native-wpilib",
                        ["native/wpilib/robotpy-native-wpilib.pc"],
                    ) +
                    local_pc_file_util(
                        "//subprojects/robotpy-native-wpihal",
                        ["native/wpihal/robotpy-native-wpihal.pc"],
                    ) +
                    local_pc_file_util(
                        "//subprojects/robotpy-native-wpinet",
                        ["native/wpinet/robotpy-native-wpinet.pc"],
                    ) +
                    local_pc_file_util(
                        "//subprojects/robotpy-native-ntcore",
                        ["native/ntcore/robotpy-native-ntcore.pc"],
                    ) +
                    local_pc_file_util(
                        "//subprojects/robotpy-wpiutil",
                        [
                            "wpiutil/wpiutil.pc",
                            "wpiutil/wpiutil-casters.pc",
                            "wpiutil/wpiutil-casters.pybind11.json",
                        ],
                    ) +
                    local_pc_file_util(
                        "//subprojects/robotpy-hal",
                        ["hal/wpihal.pc"],
                    ) +
                    local_pc_file_util(
                        "//subprojects/pyntcore",
                        ["ntcore/ntcore.pc"],
                    ) +
                    local_pc_file_util(
                        "//subprojects/robotpy-wpinet",
                        ["wpinet/wpinet.pc"],
                    ) +
                    local_pc_file_util(
                        "//subprojects/robotpy-wpimath",
                        [
                            "wpimath/wpimath.pc",
                            "wpimath/wpimath-casters.pc",
                            "wpimath/geometry/wpimath_geometry.pc",
                            "wpimath/filter/wpimath_filter.pc",
                            "wpimath/_controls/wpimath_controls.pc",
                            "wpimath/kinematics/wpimath_kinematics.pc",
                            "wpimath/spline/wpimath_spline.pc",
                            "wpimath/wpimath-casters.pybind11.json",
                        ],
                    ),
    pyproject_toml = ":pyproject.toml",
    yaml_files = glob(["semiwrap/**/*.yml"]),
)

wpilib_event_extension(
    entry_point = ["wpilib/event/event.cpp"],
    extension_name = "_event",
    deps = [
        "//subprojects/robotpy-native-wpilib:wpilib",
        "//subprojects/robotpy-wpimath:wpimath_filter_pybind_library",
    ],
)

wpilib_interfaces_extension(
    entry_point = ["wpilib/interfaces/interfaces.cpp"],
    extension_name = "_interfaces",
    deps = [
        "//subprojects/robotpy-native-wpilib:wpilib",
        "//subprojects/robotpy-wpilib:wpilib_event_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_filter_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_geometry_pybind_library",
    ],
)

wpilib_extension(
    entry_point = ["wpilib/src/main.cpp"],
    extra_hdrs = glob([
        "wpilib/src/rpy/*.h",
        "wpilib/src/rpy/*.inc",
    ]),
    extra_srcs = glob(
        ["wpilib/src/**/*.cpp"],
        exclude = ["wpilib/src/main.cpp"],
    ),
    includes = [
        "wpilib",
        "wpilib/src",
    ],
    deps = [
        "//subprojects/pyntcore:ntcore_pybind_library",
        "//subprojects/robotpy-hal:wpihal_pybind_library",
        "//subprojects/robotpy-native-wpilib:wpilib",
        "//subprojects/robotpy-wpilib:wpilib_event_pybind_library",
        "//subprojects/robotpy-wpilib:wpilib_interfaces_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_controls_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_filter_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_geometry_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_pybind_library",
        "//subprojects/robotpy-wpiutil:wpiutil_pybind_library",
    ],
)

wpilib_counter_extension(
    entry_point = ["wpilib/counter/counter.cpp"],
    extension_name = "_counter",
    header_to_dat_deps = glob([
        "wpilib/src/rpy/*.h",
        "wpilib/src/rpy/*.inc",
    ]),
    deps = [
        "//subprojects/pyntcore:ntcore_pybind_library",
        "//subprojects/robotpy-hal:wpihal_pybind_library",
        "//subprojects/robotpy-native-wpilib:wpilib",
        "//subprojects/robotpy-wpilib:wpilib_event_pybind_library",
        "//subprojects/robotpy-wpilib:wpilib_interfaces_pybind_library",
        "//subprojects/robotpy-wpilib:wpilib_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_controls_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_filter_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_geometry_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_pybind_library",
        "//subprojects/robotpy-wpiutil:wpiutil_pybind_library",
    ],
)

wpilib_drive_extension(
    entry_point = ["wpilib/drive/drive.cpp"],
    extension_name = "_drive",
    header_to_dat_deps = glob([
        "wpilib/src/rpy/*.h",
        "wpilib/src/rpy/*.inc",
    ]),
    deps = [
        "//subprojects/pyntcore:ntcore_pybind_library",
        "//subprojects/robotpy-hal:wpihal_pybind_library",
        "//subprojects/robotpy-native-wpilib:wpilib",
        "//subprojects/robotpy-wpilib:wpilib_event_pybind_library",
        "//subprojects/robotpy-wpilib:wpilib_interfaces_pybind_library",
        "//subprojects/robotpy-wpilib:wpilib_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_controls_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_filter_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_geometry_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_pybind_library",
        "//subprojects/robotpy-wpiutil:wpiutil_pybind_library",
    ],
)

wpilib_shuffleboard_extension(
    entry_point = ["wpilib/shuffleboard/shuffleboard.cpp"],
    extension_name = "_shuffleboard",
    extra_hdrs = glob(["wpilib/shuffleboard/*.h"]),
    extra_srcs = glob(
        ["wpilib/shuffleboard/*.cpp"],
        exclude = ["wpilib/shuffleboard/shuffleboard.cpp"],
    ),
    includes = ["wpilib/shuffleboard"],
    deps = [
        "//subprojects/pyntcore:ntcore_pybind_library",
        "//subprojects/robotpy-hal:wpihal_pybind_library",
        "//subprojects/robotpy-native-wpilib:wpilib",
        "//subprojects/robotpy-wpilib:wpilib_event_pybind_library",
        "//subprojects/robotpy-wpilib:wpilib_interfaces_pybind_library",
        "//subprojects/robotpy-wpilib:wpilib_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_controls_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_filter_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_geometry_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_pybind_library",
        "//subprojects/robotpy-wpiutil:wpiutil_pybind_library",
    ],
)

wpilib_simulation_extension(
    entry_point = ["wpilib/simulation/simulation.cpp"],
    extension_name = "_simulation",
    extra_pyi_deps = [requirement("numpy")],
    header_to_dat_deps = glob([
        "wpilib/src/rpy/*.h",
        "wpilib/src/rpy/*.inc",
    ]),
    deps = [
        "//subprojects/pyntcore:ntcore_pybind_library",
        "//subprojects/robotpy-hal:wpihal_pybind_library",
        "//subprojects/robotpy-native-wpilib:wpilib",
        "//subprojects/robotpy-wpilib:wpilib_event_pybind_library",
        "//subprojects/robotpy-wpilib:wpilib_interfaces_pybind_library",
        "//subprojects/robotpy-wpilib:wpilib_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_controls_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_filter_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_geometry_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_kinematics_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_pybind_library",
        "//subprojects/robotpy-wpiutil:wpiutil_pybind_library",
    ],
)

define_pybind_library(
    name = "wpilib",
    extra_entry_points = {"robotpy": ["run = wpilib._impl.start:Main"]},
    version = MOSTROBOTPY_VERSION,
)

filegroup(
    name = "generated_files",
    srcs = [
        "wpilib.generated_files",
        "wpilib_counter.generated_files",
        "wpilib_drive.generated_files",
        "wpilib_event.generated_files",
        "wpilib_interfaces.generated_files",
        "wpilib_simulation.generated_files",
    ],
    tags = ["manual"],
    visibility = ["//visibility:public"],
)
