load("@mostrobotpy_tests_pip_deps//:requirements.bzl", "requirement")
load("//:version.bzl", "MOSTROBOTPY_VERSION")
load("//bazel_scripts:generate_build_info.bzl", "generate_build_info")
load("//subprojects/robotpy-wpimath:generated_build_info.bzl", "define_pybind_library", "publish_library_casters", "wpimath_controls_extension", "wpimath_extension", "wpimath_filter_extension", "wpimath_geometry_extension", "wpimath_interpolation_extension", "wpimath_kinematics_extension", "wpimath_spline_extension")

generate_build_info(
    name = "wpimath",
    local_libraries = [
        "//subprojects/robotpy-native-wpiutil:import",
        "//subprojects/robotpy-native-wpimath:import",
        "//subprojects/robotpy-wpiutil:import",
    ],
    pkgcfgs = [
        "$(location //subprojects/robotpy-native-wpiutil:import)/site-packages/native/wpiutil/robotpy-native-wpiutil.pc",
        "$(location //subprojects/robotpy-native-wpimath:import)/site-packages/native/wpimath/robotpy-native-wpimath.pc",
        "$(location //subprojects/robotpy-wpiutil:import)/site-packages/wpiutil/wpiutil.pc",
    ],
    pyproject_toml = ":pyproject.toml",
    yaml_files = glob(["semiwrap/**/*.yml"]),
)

publish_library_casters(
    typecasters_srcs = glob([
        "wpimath/_impl/src/**",
    ]),
)

wpimath_extension(
    entry_point = ["wpimath/src/wpimath.cpp"],
    extra_hdrs = glob(["wpimath/_impl/src/**/*.h"]),
    header_to_dat_deps = glob(["wpimath/_impl/src/**/*.h"]),
    includes = [
        "wpimath/_impl/src",
        "wpimath/_impl/src/type_casters",
    ],
    deps = [
        "//subprojects/robotpy-native-wpimath:wpimath",
        "//subprojects/robotpy-wpiutil:wpiutil_pybind_library",
    ],
)

wpimath_filter_extension(
    entry_point = ["wpimath/filter/filter.cpp"],
    extension_name = "_filter",
    header_to_dat_deps = glob(["wpimath/_impl/src/**/*.h"]),
    deps = [
        "//subprojects/robotpy-native-wpimath:wpimath",
        "//subprojects/robotpy-wpimath:wpimath_pybind_library",
        "//subprojects/robotpy-wpiutil:wpiutil_pybind_library",
    ],
)

wpimath_geometry_extension(
    entry_point = ["wpimath/geometry/geometry.cpp"],
    extension_name = "_geometry",
    extra_hdrs = glob(["wpimath/geometry/include/rpy/*"]),
    extra_pyi_deps = [requirement("numpy")],
    header_to_dat_deps = glob([
        "wpimath/geometry/include/**/*.h",
        "wpimath/_impl/src/**/*.h",
    ]),
    includes = ["wpimath/geometry/include"],
    deps = [
        "//subprojects/robotpy-native-wpimath:wpimath",
        "//subprojects/robotpy-wpimath:wpimath_pybind_library",
        "//subprojects/robotpy-wpiutil:wpiutil_pybind_library",
    ],
)

wpimath_interpolation_extension(
    entry_point = ["wpimath/interpolation/interpolation.cpp"],
    extension_name = "_interpolation",
    header_to_dat_deps = glob([
        "wpimath/geometry/include/**/*.h",
        "wpimath/_impl/src/**/*.h",
    ]),
    deps = [
        "//subprojects/robotpy-native-wpimath:wpimath",
        "//subprojects/robotpy-wpimath:wpimath_geometry_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_pybind_library",
        "//subprojects/robotpy-wpiutil:wpiutil_pybind_library",
    ],
)

wpimath_kinematics_extension(
    entry_point = ["wpimath/kinematics/kinematics.cpp"],
    extension_name = "_kinematics",
    header_to_dat_deps = glob([
        "wpimath/geometry/include/**/*.h",
        "wpimath/_impl/src/**/*.h",
    ]),
    deps = [
        "//subprojects/robotpy-native-wpimath:wpimath",
        "//subprojects/robotpy-wpimath:wpimath_geometry_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_pybind_library",
        "//subprojects/robotpy-wpiutil:wpiutil_pybind_library",
    ],
)

wpimath_spline_extension(
    entry_point = ["wpimath/spline/spline.cpp"],
    extension_name = "_spline",
    extra_pyi_deps = [requirement("numpy")],
    header_to_dat_deps = glob([
        "wpimath/geometry/include/**/*.h",
        "wpimath/_impl/src/**/*.h",
    ]),
    deps = [
        "//subprojects/robotpy-native-wpimath:wpimath",
        "//subprojects/robotpy-wpimath:wpimath_geometry_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_pybind_library",
        "//subprojects/robotpy-wpiutil:wpiutil_pybind_library",
    ],
)

wpimath_controls_extension(
    entry_point = ["wpimath/_controls/controls.cpp"],
    extension_name = "_controls",
    extra_pyi_deps = [requirement("numpy")],
    header_to_dat_deps = glob([
        "wpimath/geometry/include/**/*.h",
        "wpimath/_impl/src/**/*.h",
    ]),
    deps = [
        "//subprojects/robotpy-native-wpimath:wpimath",
        "//subprojects/robotpy-wpimath:wpimath_geometry_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_kinematics_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_pybind_library",
        "//subprojects/robotpy-wpimath:wpimath_spline_pybind_library",
        "//subprojects/robotpy-wpiutil:wpiutil_pybind_library",
    ],
)

define_pybind_library(
    name = "wpimath",
    version = MOSTROBOTPY_VERSION,
)

filegroup(
    name = "generated_files",
    srcs = [
        "wpimath.generated_files",
        "wpimath_controls.generated_files",
        "wpimath_filter.generated_files",
        "wpimath_geometry.generated_files",
        "wpimath_interpolation.generated_files",
        "wpimath_kinematics.generated_files",
        "wpimath_spline.generated_files",
    ],
    visibility = ["//visibility:public"],
)
